<?xml version="1.0"?>
<package format="3">
  <name>rosshow2</name>
  <version>1.0.0</version>
  <description>cli tool for ROS2 message visualization</description>
  <author email="dheera@dheera.net">dheera</author>
  <maintainer email="ibai@erlerobotics.com">Ibai Apellaniz</maintainer>
  <license>BSD</license>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>python-imaging</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>rclpy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>hrim_sensor_camera_msgs</run_depend>
  <run_depend>hrim_sensor_imu_msgs</run_depend>
  <run_depend>hrim_sensor_lidar_msgs</run_depend>
  <run_depend>hrim_sensor_3dcameradepth_msgs</run_depend>
  <run_depend>hrim_sensor_3dcamerastereo_msgs</run_depend>
  <run_depend>hrim_sensor_3dcameratof_msgs</run_depend>
  <run_depend>hrim_sensor_rangefinder_msgs</run_depend>
  <export>
  </export>
</package>
